fix #162 use system-stubs instead of system-lambda